--- a/style.css
+++ b/style.css
@@ -1,104 +1,147 @@
 html {
     font-size: 20px;
-    font-family: 'Open sans', Verdana, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
-
-.wrapper {
-    max-width: 1200px;
-    margin: 0 auto;
-    background: linear-gradient(to bottom, grey, rgb(238, 233, 233));
-    padding-bottom: 20px;
-}
-
-.header {
-    padding: 2.5rem;
-    display: flex;
-    flex-direction: column;
-}
-
 h1 {
-    color: white;
     font-style: normal;
-    font-weight: normal;
-    font-size: 2.7rem;
-    line-height: 46px;
+    font-weight: lighter;
+    font-size: 80px;
+    line-height: 80px;
 }
-
 h2 {
     font-style: normal;
     font-weight: normal;
     font-size: 1.5rem;
     line-height: 46px;
+    background-color:dimgray;
+    color: floralwhite;
+    padding-left: 5px;
+    text-transform: uppercase;
 }
-
-h3 {
-    color: white;
+h5 {
     font-style: normal;
     font-weight: normal;
-    font-size: 34px;
-    line-height: 46px;
+    font-size: 16px;
 }
-
-a {
-    text-decoration: none;
+hr {
+    color: white;
+    width: 100%;
 }
 li {
+    display: flex;
+    align-items: center;
     padding: 0.2rem;
 }
-
-.content {
-    padding: 0 1.5rem;
-
+p,
+pre {
+    padding-left: 10px;
 }
-
+mark {
+    background-color: initial;
+    border: none;
+}
+.main {
+    max-width: 1200px;
+    margin: 0 auto;
+}
 .layout-2-column {
     display: flex;
-    background-color: white;
-    padding: 20px;
+    background: linear-gradient(to bottom, rgba(218, 211, 209, 0.932), rgb(238, 233, 233));
+}
+.side-left,
+.side-right {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
-.myfoto {
+.name {
+    font-weight: 600;
+}
+
+.icon {
+    display: inline-block;
+    height: 32px;
+    width: 32px;
+    margin-right: 5px;
+    opacity: 0.8;
+}
+.discord {
+    background: url(./images/discord_icon.png);   
+}
+.phone {
+    background: url(./images/phone_icon.png);
+}
+.email {
+    background: url(./images/email_icon.png);
+}
+.address {
+    background: url(./images/address_icon.png);
+}
+.my-email {
+    text-decoration: none;
+    color: initial;
+}
+.my-email:hover {
+    text-decoration: underline;
+}
+.skill,
+.experience,
+.language {
+    padding-inline-start: 10px;
+}
+a.more {
+    text-decoration: none;
+    color: rgb(59, 45, 45);
+    font-style: italic;
+    padding-left: 10px;
+}
+a.more:hover {
+    text-decoration: underline;
+}
+.my-photo {
     width: 335px;
     height: 375px;
-    border-radius: 10px 100px / 120px;
-    box-shadow: 0 10px 20px rgba(12, 11, 11, 0.5)
+    border-radius: 50%;
+    opacity: 0.8;
 }
-
-.contacts {
-    padding-top: 2.5rem;
-}
-
 .contacts__link {
     list-style-type: none;
-    padding-left: 0;
+    padding-left: 10px;
+}
+.sample-code {
+    font-style: italic;
+}
+progress {
+    background-color: inherit;
+  }
+  progress::-webkit-progress-bar {
+    background-color: darkgray;
+  }
+  progress::-webkit-progress-value {
+    background-color: gray;
+  }
+  progress::-moz-progress-bar {
+    background-color: darkgray;
+  }
+.graph {
+    display: inline-block;
+    width: 150px;
+    height: 20px;
+    padding: 5px;
+    margin-right: 10px;
 }
 
-.left {
-    width: 50%;
-    padding: 1.5rem;
-    border: gray 1px solid;
-    background: linear-gradient(to left, rgb(122, 112, 112) 1%, gray 5%, 20%, white 90%);
-}
-
-.right {
-    width: 50%;
-    padding: 1.5rem;
-    border: gray 1px solid;
-    background: linear-gradient(to right, rgb(122, 112, 112) 1%, gray 5%, 20%, white 90%)
-
-}
-
+/* footer */
 .footer {
-    background: none;
-    margin: 0 1.5rem;
+    background: linear-gradient(to bottom, rgba(218, 211, 209, 0.932), rgb(238, 233, 233));
 }
-
 .footer__icon {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    align-items: center;
 }
-
 .icon-rss {
     background-image: url(https://rs.school/images/rs_school_js.svg);
     width: 100px;
@@ -107,25 +150,20 @@ li {
     background-size: 100% 100%;
     transition: 0.5s linear;
     position: relative;
-    top: 0;
 }
-
 .icon-rss:hover {
-    top: 30px; 
+    transform: scale(1.1);
 }
-
 .icon-github {
     width: 51px;
     height: 51px;
     position: relative;
     transition: 0.5s linear;
 }
-
 .icon-github:hover {
-    transform: scale(1.5);
+    transform: scale(1.2);
 }
-
-.creation {
+.creation-date {
     text-align: center;
     padding: 0;
 }
