--- a/style.css
+++ b/style.css
@@ -1,82 +1,215 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 html {
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
+body {
+  background: linear-gradient(to bottom, rgba(218, 211, 209, 0.932), rgb(238, 233, 233));
+}
+
 h1 {
     font-style: normal;
     font-weight: lighter;
     font-size: 80px;
     line-height: 80px;
+    letter-spacing: 5px;
 }
 h2 {
     font-style: normal;
     font-weight: normal;
     font-size: 1.5rem;
     line-height: 46px;
-    background-color:dimgray;
+    background: linear-gradient(90deg, rgba(100,102,106,1) 0%, rgba(183,183,200,1) 23%, rgba(230,237,238,1) 100%);
     color: floralwhite;
     padding-left: 5px;
     text-transform: uppercase;
+    padding-left: 20px;
+}
+h3 {
+  font-style: normal;
+    font-weight: normal;
+    font-size: 32px;
+    padding-left: 200px;
 }
 h5 {
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
 }
-hr {
-    color: white;
-    width: 100%;
+ul {
+  list-style-type: none;
 }
-li {
+.skill li {
     display: flex;
     align-items: center;
     padding: 0.2rem;
 }
-p,
-pre {
+p {
     padding-left: 10px;
 }
 mark {
     background-color: initial;
     border: none;
 }
-.main {
-    max-width: 1200px;
-    margin: 0 auto;
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
 }
-.layout-2-column {
-    display: flex;
-    background: linear-gradient(to bottom, rgba(218, 211, 209, 0.932), rgb(238, 233, 233));
-}
-.side-left,
-.side-right {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
+/* header */
+.header {
+  position: fixed;
+  width: 100%;
+  background: linear-gradient(to bottom, rgba(218, 211, 209, 0.932), rgb(238, 233, 233));
 }
 
+.nav {
+  padding: 20px 0;
+}
+
+.nav__list {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.title {
+  list-style-type: none;
+}
+.title a,
+.menu__list a {
+  text-decoration:none;
+  color: #000000;
+  transition: 0.3s ease-in;
+}
+.title:hover a,
+.menu__list:hover a {
+  color: #9ca2c0;
+}
+/* burger__menu */
+.burger__menu {
+  position: relative;
+}
+.burger {
+  display: none;
+}
+.burger__icon {
+  background-image: url('./images/icon/menu_burger.svg');
+  display: inline-block;
+  height: 18px;
+  width: 32px;
+}
+.burger__icon_active {
+  background-image: url('./images/icon/menu_exit.svg');
+  display: inline-block;
+  height: 25px;
+  width: 25px;
+}
+.menu__content {
+  display: none;
+  margin-top: 65px;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: -465px;
+  transition: top 0.5s linear;
+  z-index: -1;
+}
+.menu__content_active {
+  top: 0;
+}
+
+.nav__menu {
+  display: flex;
+  flex-direction: column;
+  gap: 15px 0;
+  padding: 15px 0;
+  background: linear-gradient(to bottom, rgba(218, 211, 209, 0.932), rgb(238, 233, 233));
+}
+
+.menu__list {
+  display: inline-block;
+  list-style-type: none;
+}
+
+.welcome,
+.contacts,
+.skills,
+.languages,
+.education,
+.about-me,
+.experiences,
+.sample-code,
+.my_project {
+  padding-top: 65px;
+}
+.contacts__link,
+.skill,
+.education__list,
+.about-me__content,
+.experience,
+.language {
+  padding-top: 40px;
+  padding-left: 25px;
+}
+
+/* welcome */
+.welcome__content {
+  display: flex;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(100,102,106,1) 0%, rgba(204,204,215,1) 23%, rgba(230,237,238,0.5) 100%);
+  margin-top: 65px;
+  border-radius: 5px;
+}
+.my__photo {
+  width: 320px;
+  height: 430px;
+  border-radius: 5px;
+  border: 3px solid #ffffff;
+}
+.welcome__text {
+  padding-left: 30px;
+}
 .name {
-    font-weight: 600;
+  font-weight: 600;
+  padding-left: 100px;
+}
+.quote {
+  padding-top: 100px;
+  font-style: italic;
 }
 
+/* contacts */
+.contacts__link {
+  display: flex;
+  flex-direction: column;
+  gap: 10px 0;
+  list-style-type: none;
+}
+.contacts__link li {
+  display: flex;
+  align-items: center;
+}
 .icon {
     display: inline-block;
     height: 32px;
     width: 32px;
     margin-right: 5px;
-    opacity: 0.8;
 }
 .discord {
-    background: url(./images/discord_icon.png);   
+    background: url('./images/icon/discord_icon.png');   
 }
 .phone {
-    background: url(./images/phone_icon.png);
+    background: url('./images/icon/phone_icon.png');
 }
 .email {
-    background: url(./images/email_icon.png);
+    background: url('./images/icon/email_icon.png');
 }
 .address {
-    background: url(./images/address_icon.png);
+    background: url('./images/icon/address_icon.png');
 }
 .my-email {
     text-decoration: none;
@@ -85,33 +218,8 @@ mark {
 .my-email:hover {
     text-decoration: underline;
 }
-.skill,
-.experience,
-.language {
-    padding-inline-start: 10px;
-}
-a.more {
-    text-decoration: none;
-    color: rgb(59, 45, 45);
-    font-style: italic;
-    padding-left: 10px;
-}
-a.more:hover {
-    text-decoration: underline;
-}
-.my-photo {
-    width: 335px;
-    height: 375px;
-    border-radius: 50%;
-    opacity: 0.8;
-}
-.contacts__link {
-    list-style-type: none;
-    padding-left: 10px;
-}
-.sample-code {
-    font-style: italic;
-}
+
+/* skill */
 progress {
     background-color: inherit;
   }
@@ -131,6 +239,52 @@ progress {
     padding: 5px;
     margin-right: 10px;
 }
+/* education__list */
+.certificate_link {
+  color: #0774f1;
+  cursor: pointer;
+  transition: color 0.3s linear;
+}
+.certificate_link:hover {
+  color: #9ca2c0;
+}
+/* sample code */
+.sample-code pre {
+  margin-top: 40px;
+}
+/* project */
+.project__container {
+  display: flex;
+  justify-content: center;
+  padding-top: 40px;
+}
+.project_zoo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #ffffff;
+  width: 60%;
+  background: linear-gradient(90deg, rgba(100,102,106,1) 0%, rgba(183,183,200,1) 23%, rgba(230,237,238,1) 100%);
+  border-radius: 5px;
+  cursor: pointer;
+}
+.project__content {
+  width: 50%;
+  margin: 20px;
+  border-radius: 5px;
+}
+.description {
+  font-size: 18px;
+}
+.description p {
+  padding: 10px;
+}
+
+/* language */
+.language {
+  padding-bottom: 40px;
+}
 
 /* footer */
 .footer {
@@ -143,7 +297,7 @@ progress {
     align-items: center;
 }
 .icon-rss {
-    background-image: url(https://rs.school/images/rs_school_js.svg);
+    background-image: url('https://rs.school/images/rs_school_js.svg');
     width: 100px;
     height: 38px;
     display: inline-block;
@@ -167,3 +321,68 @@ progress {
     text-align: center;
     padding: 0;
 }
+@media (max-width: 1125px) {
+  .project_zoo {
+    flex-direction: column;
+  }
+  .project__content,
+  .description {
+    width: 70%;
+  }
+}
+@media (max-width: 850px) {
+  .header {
+    position: relative;
+    z-index: 1000;
+  }
+  .burger {
+    display: flex;
+    justify-content: flex-end;
+    height: 65px;
+    align-items: center;
+    padding-right: 20px;
+  }
+  .nav {
+    display: none;;
+  }
+  .nav__menu {
+    padding-left: 20px;
+  }
+  .welcome__content {
+    flex-direction: column-reverse;
+    margin-top: 0;
+  }
+  .quote {
+    display: none;
+  }
+  .menu__content {
+    display: block;
+  }
+  .welcome {
+    padding-top: 0;
+  }
+}
+@media (max-width: 530px) {
+  h1 {
+    font-size: 1.5rem;
+    line-height: 40px;
+  }
+  h3 {
+    font-style: normal;
+      font-weight: normal;
+      font-size: 24px;
+      padding-left: 0;
+      padding-bottom: 20px;
+  }
+  .contacts__link {
+    font-size: 18px;
+  }
+  .graph {
+    display: inline-block;
+    width: 100px;
+    height: 20px;
+    padding: 5px;
+    margin-right: 5px;
+  }
+}
+
