--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ html {
 body {
   background: linear-gradient(to bottom, rgba(218, 211, 209, 0.932), rgb(238, 233, 233));
 }
-
 h1 {
     font-style: normal;
     font-weight: lighter;
     font-size: 80px;
     line-height: 80px;
     letter-spacing: 5px;
+    padding-top: 20px;
 }
 h2 {
     font-style: normal;
@@ -35,6 +35,8 @@ h3 {
     font-weight: normal;
     font-size: 32px;
     padding-left: 200px;
+    padding: 20px 0;
+    animation: 4s linear infinite reverse move_color;
 }
 h4 {
   font-style: normal;
@@ -47,16 +49,11 @@ h5 {
     font-weight: normal;
     font-size: 16px;
 }
+h6 {
+  font-size: 0;
+}
 ul {
   list-style-type: none;
-}
-.skill li {
-    display: flex;
-    align-items: center;
-    padding: 0.2rem;
-}
-p {
-    padding-left: 10px;
 }
 mark {
     background-color: initial;
@@ -66,17 +63,16 @@ mark {
   max-width: 1200px;
   margin: 0 auto;
 }
+
 /* header */
 .header {
   position: fixed;
   width: 100%;
   background: linear-gradient(to bottom, rgba(218, 211, 209, 0.932), rgb(238, 233, 233));
 }
-
 .nav {
   padding: 20px 0;
 }
-
 .nav__list {
   display: flex;
   align-items: center;
@@ -95,11 +91,19 @@ mark {
 .menu__list:hover a {
   color: #9ca2c0;
 }
+
 /* burger__menu */
 .burger__menu {
   position: relative;
 }
 .burger {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background: linear-gradient(to bottom, rgba(218, 211, 209, 1), rgb(238, 233, 233));
+
   display: none;
 }
 .burger__icon {
@@ -122,25 +126,22 @@ mark {
   left: 0;
   top: -465px;
   transition: top 0.5s linear;
-  z-index: -1;
+  /* z-index: -1; */
 }
 .menu__content_active {
   top: 0;
 }
-
 .nav__menu {
   display: flex;
   flex-direction: column;
   gap: 15px 0;
   padding: 15px 0;
-  background: linear-gradient(to bottom, rgba(218, 211, 209, 0.932), rgb(238, 233, 233));
+  background: linear-gradient(to bottom, rgba(218, 211, 209, 1), rgb(238, 233, 233));
 }
-
 .menu__list {
   display: inline-block;
   list-style-type: none;
 }
-
 .welcome,
 .contacts,
 .skills,
@@ -156,7 +157,7 @@ mark {
 .skill,
 .education__list,
 .about-me__content,
-.experience,
+.experiences__container,
 .language {
   padding-top: 40px;
   padding-left: 25px;
@@ -170,8 +171,10 @@ mark {
   margin-top: 65px;
   border-radius: 5px;
 }
-.welcome__content figure{
+.welcome__img{
   height: 430px;
+  margin: 30px 0;
+  margin-left: 30px;
 }
 .my__photo {
   width: 320px;
@@ -202,11 +205,16 @@ mark {
   display: flex;
   align-items: center;
 }
+.icon__bg {
+  background-color: rgba(189, 194, 202, 0.8);
+  padding: 4px 4px 2px;
+  border-radius: 5px;
+  margin-right: 10px;
+}
 .icon {
-    display: inline-block;
-    height: 32px;
-    width: 32px;
-    margin-right: 5px;
+  display: inline-block;
+  height: 32px;
+  width: 32px;
 }
 .discord {
     background: url('./images/icon/discord_icon.png');   
@@ -229,6 +237,17 @@ mark {
 }
 
 /* skill */
+.skill {
+  display: flex;
+  justify-content: space-around;
+  padding-right: 20px;
+}
+.skill li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.2rem;
+}
 progress {
     background-color: inherit;
   }
@@ -243,26 +262,72 @@ progress {
   }
 .graph {
     display: inline-block;
-    width: 150px;
+    width: 130px;
     height: 20px;
     padding: 5px;
     margin-right: 10px;
 }
+
 /* about */
 .about-me__content {
   display: flex;
   align-items: center;
   gap: 0 20px;
 }
-.about-me__content iframe{
-  padding-right: 20px;
+
+.about-me__container {
+  display: flex;
+  flex-direction: column;
+}
+.about-me__text,
+.about-me__hobby {
+  padding: 20px;
+}
+.hobby__snow {
+  background-image: url('./images/icon/snowboarding.png');
+  background-size: contain;
+  background-position: center;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+}
+.hobby__summer {
+  background-image: url('./images/icon/bike.png');
+  background-size: contain;
+  background-position: center;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+}
+.iframe__about {
+  border: 5px solid #ffffff;
+  width: 100%;
   width: 280px;
   height: 140px;
+  margin-right: 20px;
 }
-.about-me__content p{
-  padding-right: 20px;
-}
+
 /* education__list */
+.education__content,
+.experiences__content {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+.year {
+  flex: 1 1 10%;
+  font-weight: bold;
+  font-style: italic;
+}
+.status,
+.school {
+  flex: 1 1 25%;
+  font-weight: 300;
+}
+.speciality{
+  flex: 1 1 25%;
+  font-weight: 400;
+}
 .certificate_link {
   color: #0774f1;
   cursor: pointer;
@@ -271,17 +336,22 @@ progress {
 .certificate_link:hover {
   color: #9ca2c0;
 }
+
 /* sample code */
 .sample-code pre {
   margin-top: 40px;
 }
+
 /* project */
 .project__container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  gap: 20px 0;
+  align-items: center;
   padding-top: 40px;
 }
-.project_zoo {
+.project_zoo,
+.project_slider {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -311,7 +381,8 @@ progress {
 
 /* footer */
 .footer {
-    background: linear-gradient(to bottom, rgba(218, 211, 209, 0.932), rgb(238, 233, 233));
+  padding: 15px 0;
+  background: linear-gradient(to bottom, rgba(218, 211, 209, 0.932), rgb(238, 233, 233));
 }
 .footer__icon {
     display: flex;
@@ -344,8 +415,11 @@ progress {
     text-align: center;
     padding: 0;
 }
+
+/* media */
 @media (max-width: 1125px) {
-  .project_zoo {
+  .project_zoo,
+  .project_slider {
     flex-direction: column;
   }
   .project__content,
@@ -353,10 +427,12 @@ progress {
     width: 70%;
   }
 }
-@media (max-width: 850px) {
+@media (max-width: 1050px) {
+  .main {
+    padding-top: 65px;
+  }
   .header {
     position: relative;
-    z-index: 1000;
   }
   .burger {
     display: flex;
@@ -371,26 +447,82 @@ progress {
   .nav__menu {
     padding-left: 20px;
   }
+  .menu__content {
+    display: block;
+  }
+}
+@media (max-width: 850px) {
   .welcome__content {
     flex-direction: column-reverse;
     margin-top: 0;
+    margin-bottom: 40px;
   }
   .quote {
     display: none;
   }
-  .menu__content {
-    display: block;
-  }
+  
   .welcome {
     padding-top: 0;
+  }
+  .skill {
+    flex-direction: column;
+  }
+  .skill li {
+    flex-direction: row;
   }
   .about-me__content {
     flex-direction: column;
   }
+  iframe {
+    margin-top: 20px;
+  }
+  .contacts,
+  .skills,
+  .languages,
+  .education,
+  .about-me,
+  .experiences,
+  .sample-code,
+  .my_project {
+    padding-top: 0;
+  }
+  .contacts__link,
+  .skill,
+  .education__list,
+  .about-me__content,
+  .experiences__container,
+  .project__container,
+  pre,
+  .language {
+    padding-bottom: 40px;
+  }
+}
+@media (max-width: 600px) {
+  .education__content,
+  .experiences__content {
+    flex-direction: column;
+  }
+  .year,
+  .status,
+  .speciality,
+  .school {
+    padding: 5px 0;
+  }
+  .status {
+    padding-left: 20px;
+  }
+  .speciality {
+    align-self: center;
+
+  }
+  .school {
+    align-self: flex-end;
+    padding-right: 15px;
+  }
 }
 @media (max-width: 530px) {
   h1 {
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     line-height: 40px;
   }
   h3 {
@@ -400,8 +532,11 @@ progress {
       padding-left: 0;
       padding-bottom: 20px;
   }
+  .welcome__img {
+    margin-left: 0;
+  }
   .contacts__link {
-    font-size: 18px;
+    font-size: 16px;
   }
   .graph {
     display: inline-block;
@@ -410,5 +545,20 @@ progress {
     padding: 5px;
     margin-right: 5px;
   }
+  code {
+    font-size: 13px;
+  }
 }
 
+/* animation */
+@keyframes move_color {
+  from {
+    color: #000000;
+  }
+  50% {
+    color: #9ca2c0;
+  }
+  to {
+    color: #000000;
+  }
+}
